--------------------------------------------------------------------------------------------------
Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
07/03/24 (TRUST) New feature  : New syntax for facsec with Euler implicit scheme: more options allowed in datafile to monitor facsec behavior
07/03/24 (TRUST) Keyword      : Obsolete syntax for Champ_Fonc_Fonction, Champ_Fonc_Fonction_txyz, and Sutherland (pre v1.8.4) is not accepted anymore.
07/03/24 (TRUST) Keyword      : Obsolete syntax for Champ_Fonc_tabule (pre v1.8.4) is not accepted anymore. Syntax should be on the form Champ_fonc_tabule { pb field } nbcomp { table }
07/03/24 (TRUST) Change       : EcritureLectureSpecial is forced to 0 for PolyMAC_P0 simulations; ie: for resuming a simulation, only binary sauv files are accepted for this discretization.
07/03/24 (TRUST) New Keyword  : Possible to use "Unite" keyword in Definition_champs with Transformation and Morceau_Equation to specify the unit of the field (specified unit will be written in post-processing files instead of "??")
06/03/24 (TRUST) New feature  : Implementing ICoCo resetTime() method allowing to reset the time origin during the computation. For now previous post files are overwritten by default.
04/03/24 (TRUST) New feature  : New option 'trust -quiet jdd.data' can be used to run a dataset with not output on the console. 
04/03/24 (TRUST) New feature  : It is now possible to resume Pb_Multiphase simulations (both via last time or champ_fonc_reprise).
29/02/24 (TRUST) Tools        : Patched MEDCoupling to correct tetrahedrons remapping (fix will be included in next release of MEDCoupling)
26/02/24 (TRUST) New feature  : Fallback to coarse solver if the IJK-multigrid has not reached convergence during current timestep (this concerns IJK discretization only)